Update workspace api added
