# backend/internal/modules/workspace/route/workspace_route.go
@@ -24,4 +24,5 @@ func RegisterWorkspaceRoutes(router *gin.RouterGroup,txm *database.TxManager, cf
 	workspaceRoutes.POST("/create", workspaceHandler.CreateWorkspace)
 	workspaceRoutes.GET("/list", workspaceHandler.ListMyWorkspaces)
 	workspaceRoutes.GET("/details/:id", workspaceHandler.GetWorkspaceDetails)
+	workspaceRoutes.PUT("/:id", workspaceHandler.UpdateWorkspace)
 }
